syntax = "proto3";

package ci.proto.storage;

option java_package = "ru.yandex.ci.storage.api";

import "ci/proto/storage/check.proto";
import "ci/proto/storage/check_iteration.proto";
import "ci/proto/storage/common.proto";
import "ci/proto/storage/storage_front_api.proto";
import "google/protobuf/timestamp.proto";

service StorageFrontTestsApiService {
    rpc SearchTests(SearchTestsRequest) returns (SearchTestsResponse);
}

message SearchTestsRequest {
    string branch = 1; // required
    string project = 2;
    string path = 3;
    string name = 4;
    string subtest_name = 5;
    repeated ResultType result_types = 6;
    repeated TestStatus statuses = 7;
    NotificationFilter notificationFilter = 8;
    oneof page {
        SearchTestsPage next = 10;
        SearchTestsPage previous = 11;
    }
    uint32 page_size = 12; // [1, 100]; default - 20
}

message SearchTestsPage {
    string path = 1;
    string testId = 2;
}

message SearchTestsResponse{
    repeated TestViewModel tests = 1;
    SearchTestsPage next = 2;
    SearchTestsPage previous = 3;
}

message TestViewModel {
    TestStatusId id = 1;
    repeated TestToolchainViewModel toolchains = 2;

}

message TestToolchainViewModel {
    string toolchain = 1;

    uint64 revision_number = 2;

    ResultType result_type = 3;
    TestStatus test_status = 4;

    string uid = 5;

    string path = 6;
    string name = 7;
    string subtest_name = 8;
    string service = 9;

    repeated string tags = 10;
}
